# Formigo

./: Anchor.toml  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/: layout.tsx  page.tsx
app/(landing)/: layout.tsx  page.tsx
app/faq/: page.tsx
app/home/: page.tsx
app/responses/: layout.tsx  page.tsx
app/surveys/: layout.tsx  page.tsx
backend/: Dockerfile  env.example  package-lock.json  package.json  tsconfig.json
backend/src/: index.ts
components/: Footer.tsx  HomeNavBar.tsx  Landing.tsx  LandingNavbar.tsx  ResponseItem.tsx  Responses.tsx  SurveyItem.tsx  Surveys.tsx  navbar.tsx
formigo-program/: Anchor.toml
formigo-program/tests/: formigo-program.ts
frontend/: .gitignore  constant.tsx  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: constant.ts  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: CreateSurveyModal.tsx  Footer.tsx  Navbar.tsx  Responses.tsx  SurveyItem.tsx  auth-checker.tsx  blank-card.tsx  create-form.tsx  dashboard-analytics.tsx  dashboard-select.tsx  divider-text.tsx  footer.tsx  (+9 more)
programs/survey/: Cargo.toml
programs/survey/src/: constant.rs  context.rs  errors.rs  lib.rs  state.rs  util.rs
programs/survey/src/context/: close_form.rs  close_respond_form.rs  create_form.rs  create_taker_form.rs  create_user.rs  mod.rs  respond_form.rs  update_form.rs  update_respond_form.rs
programs/survey/src/state/: form.rs  metadata.rs  mod.rs  respondent_form.rs  spl_whitelist.rs  taker_form.rs  user.rs  whitelist.rs
tests/: survey.ts
(+127 files in other folders)
